--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,3 +17,8 @@ body {
     background-color: rgb(0, 179, 244) !important;
     cursor: pointer !important;
 }
+
+.image, .card-img {
+    width: 200px;
+    height: auto;
+}
